Share more FhirModelResolver code