@@ -1,5 +1,6 @@
 package org.opencds.cqf.cql.model;
 
+import java.lang.reflect.InvocationTargetException;
 import java.time.Instant;
 import java.time.OffsetTime;
 import java.time.ZoneOffset;
@@ -8,6 +9,7 @@ import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.List;
 import java.util.TimeZone;
+import java.util.function.BiFunction;
 
 import org.hl7.fhir.exceptions.FHIRException;
 import org.hl7.fhir.instance.model.Base;
@@ -25,21 +27,6 @@ import org.hl7.fhir.instance.model.api.IBaseBackboneElement;
 import org.hl7.fhir.instance.model.api.IBaseElement;
 import org.hl7.fhir.instance.model.api.ICompositeType;
 import org.hl7.fhir.instance.model.api.IPrimitiveType;
-// import org.hl7.fhir.instance.model.Base;
-// import org.hl7.fhir.instance.model.BaseDateTimeType;
-// import org.hl7.fhir.instance.model.DateTimeType;
-// import org.hl7.fhir.instance.model.DateType;
-// import org.hl7.fhir.instance.model.IdType;
-// import org.hl7.fhir.instance.model.InstantType;
-// import org.hl7.fhir.instance.model.Quantity;
-// import org.hl7.fhir.instance.model.TemporalPrecisionEnum;
-// import org.hl7.fhir.instance.model.TimeType;
-// import org.hl7.fhir.instance.model.api.IAnyResource;
-// import org.hl7.fhir.instance.model.api.IBase;
-// import org.hl7.fhir.instance.model.api.IBaseBackboneElement;
-// import org.hl7.fhir.instance.model.api.IBaseElement;
-// import org.hl7.fhir.instance.model.api.ICompositeType;
-// import org.hl7.fhir.instance.model.api.IPrimitiveType;
 import org.opencds.cqf.cql.model.ModelResolver;
 import org.opencds.cqf.cql.exception.DataProviderException;
 import org.opencds.cqf.cql.exception.InvalidCast;
@@ -57,29 +44,153 @@ import ca.uhn.fhir.context.ConfigurationException;
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.context.RuntimeChildChoiceDefinition;
 
-public abstract class FhirModelResolver implements ModelResolver {
-
-    public FhirModelResolver(FhirContext fhirContext) {
-		this.fhirContext = fhirContext;
-		this.setPackageName();
-	}
-	
-	protected abstract void setPackageName();
-	public abstract Boolean objectEqual(Object left, Object right);
-	public abstract Boolean objectEquivalent(Object left, Object right);
-	//public abstract void setValue(Object target, String path, Object value);
-
+public abstract class FhirModelResolver<BaseType> implements ModelResolver {
+    public FhirModelResolver(FhirContext fhirContext, BiFunction<BaseType, BaseType, Boolean> equalsDeep) {
+        this.fhirContext = fhirContext;
+        this.equalsDeep = equalsDeep;
+    }
+    
+    private BiFunction<BaseType, BaseType, Boolean> equalsDeep;
+    private String packageName;
+       
     // Data members
     protected FhirContext fhirContext;
-    protected String packageName;
+
+
+    // TODO: Solid, generic implementations of this.
+    // Possible general approach is to check the HAPI runtime registration of attributes and see
+    // if any of the of the properties match the type.
+    public Object getContextPath(String contextType, String targetType) {
+        return targetType;
+    }
+    
+    // TODO: Solid, generic implementations of this.
+    // Possible general approach is to check the HAPI runtime registration and get the implementing class.
+    public String resolveClassName(String typeName) {
+        return this.resolveClass(typeName).getSimpleName();
+    }
+	
+    @Override
+    public Boolean objectEqual(Object left, Object right) {
+        if (left == null) {
+            return null;
+        }
+
+        if (right == null) {
+            return null;
+        }
+
+        return this.equalsDeep.apply((BaseType) left, (BaseType) right);
+    }
+
+    @Override
+    public Boolean objectEquivalent(Object left, Object right) {
+        if (left == null && right == null) {
+            return true;
+        }
+
+        if (left == null) {
+            return false;
+        }
+
+        return this.equalsDeep.apply((BaseType) left, (BaseType) right);
+    }
+
+    @Override
+    public Object createInstance(String typeName) {
+        return createInstance(resolveClass(typeName));
+    }
+
+    @Override
+    public String getPackageName() {
+        return packageName;
+    }
+
+    @Override
+    public void setPackageName(String packageName) {
+        this.packageName = packageName;
+    }
+
+    @Override
+    public Object resolvePath(Object target, String path) {
+        String[] identifiers = path.split("\\.");
+        for (String identifier : identifiers) {
+            // handling indexes: i.e. item[0].code
+            if (identifier.contains("[")) {
+                int index = Character.getNumericValue(identifier.charAt(identifier.indexOf("[") + 1));
+                target = resolveProperty(target, identifier.replaceAll("\\[\\d\\]", ""));
+                target = ((ArrayList<?>) target).get(index);
+            }
+            else {
+                target = resolveProperty(target, identifier);
+            }
+        }
+
+        return target;
+    }
+
+    @Override
+    public Class<?> resolveType(String typeName) {
+        return resolveClass(resolveClassName(typeName));
+    }
+
+    @Override
+    public Class<?> resolveType(Object value) {
+        if (value == null) {
+            return Object.class;
+        }
+
+        return value.getClass();
+    }
+
+    @Override
+    public void setValue(Object target, String path, Object value) {
+        if (target == null) {
+            return;
+        }
+
+        IBase base = (IBase) target;
+        BaseRuntimeElementCompositeDefinition<?> definition;
+        if (base instanceof IPrimitiveType) {
+            ((IPrimitiveType) target).setValue(fromJavaPrimitive(value, base));
+            return;
+        }
+        else {
+            definition = resolveRuntimeDefinition(base);
+        }
+
+        BaseRuntimeChildDefinition child = definition.getChildByName(path);
+        if (child == null) {
+            child = resolveChoiceProperty(definition, path);
+        }
+
+        try {
+            if (value instanceof Iterable) {
+                for (Object val : (Iterable<?>) value) {
+                    child.getMutator().addValue(base, (IBase) fromJavaPrimitive(val, base));
+                }
+            }
+            else {
+                child.getMutator().setValue(base, (IBase) fromJavaPrimitive(value, base));
+            }
+        } catch (ConfigurationException ce) {
+            if (value instanceof Quantity) {
+                try {
+                    value = ((Quantity) value).castToSimpleQuantity((Base) value);
+                } catch (FHIRException e) {
+                    throw new InvalidCast("Unable to cast Quantity to SimpleQuantity");
+                }
+                child.getMutator().setValue(base, (IBase) fromJavaPrimitive(value, base));
+            }
+            else {
+                throw new DataProviderException(String.format("Configuration error encountered: %s", ce.getMessage()));
+            }
+        }
+    }
 
     // getters & setters
-    public FhirContext getFhirContext() {
-        return fhirContext;
-    }
-    public void setFhirContext(FhirContext fhirContext) {
-        this.fhirContext = fhirContext;
-        fhirContext.getRestfulClientFactory().setSocketTimeout(1200 * 10000);
+    protected FhirContext getFhirContext() {
+        return this.fhirContext;
     }
 
     // Resolutions
@@ -89,9 +200,9 @@ public abstract class FhirModelResolver implements ModelResolver {
         }
 
         IBase base = (IBase) target;
-        BaseRuntimeElementCompositeDefinition definition;
+        BaseRuntimeElementCompositeDefinition<?> definition;
         if (base instanceof IPrimitiveType) {
-            return toJavaPrimitive(path.equals("value") ? ((IPrimitiveType) target).getValue() : target, base);
+            return toJavaPrimitive(path.equals("value") ? ((IPrimitiveType<?>) target).getValue() : target, base);
         }
         else {
             definition = resolveRuntimeDefinition(base);
@@ -118,13 +229,13 @@ public abstract class FhirModelResolver implements ModelResolver {
         return toJavaPrimitive(child.getMax() < 1 ? values : values.get(0), base);
     }
 
-    protected BaseRuntimeElementCompositeDefinition resolveRuntimeDefinition(IBase base) {
+    protected BaseRuntimeElementCompositeDefinition<?> resolveRuntimeDefinition(IBase base) {
         if (base instanceof IAnyResource) {
             return getFhirContext().getResourceDefinition((IAnyResource) base);
         }
 
         else if (base instanceof IBaseBackboneElement || base instanceof IBaseElement) {
-            return (BaseRuntimeElementCompositeDefinition) getFhirContext().getElementDefinition(base.getClass());
+            return (BaseRuntimeElementCompositeDefinition<?>) getFhirContext().getElementDefinition(base.getClass());
         }
 
         else if (base instanceof ICompositeType) {
@@ -134,7 +245,7 @@ public abstract class FhirModelResolver implements ModelResolver {
         throw new UnknownType(String.format("Unable to resolve the runtime definition for %s", base.getClass().getName()));
     }
 
-    protected BaseRuntimeChildDefinition resolveChoiceProperty(BaseRuntimeElementCompositeDefinition definition, String path) {
+    protected BaseRuntimeChildDefinition resolveChoiceProperty(BaseRuntimeElementCompositeDefinition<?> definition, String path) {
         for (Object child :  definition.getChildren()) {
             if (child instanceof RuntimeChildChoiceDefinition) {
                 RuntimeChildChoiceDefinition choiceDefinition = (RuntimeChildChoiceDefinition) child;
@@ -148,7 +259,7 @@ public abstract class FhirModelResolver implements ModelResolver {
         throw new UnknownPath(String.format("Unable to resolve path %s for %s", path, definition.getName()));
     }
 
-    protected Class resolveClass(String className) {
+    protected Class<?> resolveClass(String className) {
         try {
             return Class.forName(String.format("%s.%s", packageName, className));
         }
@@ -158,161 +269,18 @@ public abstract class FhirModelResolver implements ModelResolver {
     }
 
     // Creators
-    protected Object createInstance(Class clazz) {
+    protected Object createInstance(Class<?> clazz) {
         try {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         }
-        catch (InstantiationException | IllegalAccessException e) {
+        catch (NoSuchMethodException | InvocationTargetException | InstantiationException | IllegalAccessException e) {
             throw new UnknownType(String.format("Could not create an instance of class %s.\nRoot cause: %s", clazz.getName(), e.getMessage()));
         }
     }
 
-    @Override
-    public Object createInstance(String typeName) {
-        return null;
-    }
-
-    @Override
-    public String getPackageName() {
-        return packageName;
-    }
-
-    @Override
-    public void setPackageName(String packageName) {
-        this.packageName = packageName;
-    }
-
-    @Override
-    public Object resolvePath(Object target, String path) {
-        String[] identifiers = path.split("\\.");
-        for (String identifier : identifiers) {
-            // handling indexes: i.e. item[0].code
-            if (identifier.contains("[")) {
-                int index = Character.getNumericValue(identifier.charAt(identifier.indexOf("[") + 1));
-                target = resolveProperty(target, identifier.replaceAll("\\[\\d\\]", ""));
-                target = ((ArrayList) target).get(index);
-            }
-            else {
-                target = resolveProperty(target, identifier);
-            }
-        }
-
-        return target;
-    }
-
-    @Override
-    public Class resolveType(String typeName) {
-        return resolveClass(resolveClassName(typeName));
-    }
-
-    @Override
-    public Class resolveType(Object value) {
-        return null;
-    }
-
-    @Override
-    public void setValue(Object target, String path, Object value) {
-        if (target == null) {
-            return;
-        }
-
-        IBase base = (IBase) target;
-        BaseRuntimeElementCompositeDefinition definition;
-        if (base instanceof IPrimitiveType) {
-            ((IPrimitiveType) target).setValue(fromJavaPrimitive(value, base));
-            return;
-        }
-        else {
-            definition = resolveRuntimeDefinition(base);
-        }
-
-        BaseRuntimeChildDefinition child = definition.getChildByName(path);
-        if (child == null) {
-            child = resolveChoiceProperty(definition, path);
-        }
-
-        try {
-            if (value instanceof Iterable) {
-                for (Object val : (Iterable) value) {
-                    child.getMutator().addValue(base, (IBase) fromJavaPrimitive(val, base));
-                }
-            }
-            else {
-                child.getMutator().setValue(base, (IBase) fromJavaPrimitive(value, base));
-            }
-        } catch (ConfigurationException ce) {
-            if (value instanceof Quantity) {
-                try {
-                    value = ((Quantity) value).castToSimpleQuantity((Base) value);
-                } catch (FHIRException e) {
-                    throw new InvalidCast("Unable to cast Quantity to SimpleQuantity");
-                }
-                child.getMutator().setValue(base, (IBase) fromJavaPrimitive(value, base));
-            }
-            else {
-                throw new DataProviderException(String.format("Configuration error encountered: %s", ce.getMessage()));
-            }
-        }
-    }
-
-    // @Override
-    // public Boolean objectEqual(Object left, Object right) {
-    //     if (left == null) {
-    //         return null;
-    //     }
-
-    //     if (right == null) {
-    //         return null;
-    //     }
-
-    //     Base base = (Base)left;
-    //     return base.equalsDeep((Base)right);
-    // }
-
-    // @Override
-    // public Boolean objectEquivalent(Object left, Object right) {
-    //     if (left == null && right == null) {
-    //         return true;
-    //     }
-
-    //     if (left == null) {
-    //         return false;
-    //     }
-
-    //     Base base = (Base)left;
-    //     return base.equalsDeep((Base)right);
-    // }
-
     // Transformations
     protected DateTime toDateTime(java.util.Date result) {
         return DateTime.fromJavaDate(result);
-    }
-    
-
-    // @Override
-    // public String resolveContextPath(String contextType, String dataType) {
-	// 	switch (contextType) {
-	// 		case "Patient":
-	// 			switch (dataType) {
-	// 				case "Patient":
-	// 					return "id";
-	// 				default: return "patient";
-	// 			}
-		
-	// 		default:
-	// 			break;
-	// 	}
-		
-    //     return null;
-    // }
-
-    // protected String convertPathToSearchParam(String type, String path) {
-    //     return null;
-    // }
-
-	@Override
-    public String resolveClassName(String typeName) {
-        return null;
     }
 
     protected DateTime toDateTime(DateTimeType value) {
@@ -366,8 +334,8 @@ public abstract class FhirModelResolver implements ModelResolver {
 
     protected org.opencds.cqf.cql.runtime.Date toDate(BaseDateTimeType value, TemporalPrecisionEnum precision) {
         Calendar calendar = value.toCalendar();
-        TimeZone tz = calendar.getTimeZone() == null ? TimeZone.getDefault() : calendar.getTimeZone();
-        ZoneOffset zoneOffset = tz.toZoneId().getRules().getStandardOffset(calendar.toInstant());
+        //TimeZone tz = calendar.getTimeZone() == null ? TimeZone.getDefault() : calendar.getTimeZone();
+        //ZoneOffset zoneOffset = tz.toZoneId().getRules().getStandardOffset(calendar.toInstant());
         switch (precision) {
             case YEAR: return new org.opencds.cqf.cql.runtime.Date(calendar.get(Calendar.YEAR));
             case MONTH: return new org.opencds.cqf.cql.runtime.Date(calendar.get(Calendar.YEAR), calendar.get(Calendar.MONTH) + 1);
